Add exports in JavaFX plugin config